[gd_scene load_steps=2 format=3 uid="uid://cjqkuvynpwhks"]

[ext_resource type="Script" path="res://scripts/start_screen.gd" id="1_kh8pp"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kh8pp")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -127.0
offset_top = 84.0
offset_right = 127.0
offset_bottom = 107.0
grow_horizontal = 2
text = "Return To Start GMTK 2024 Entry"

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 77.0
grow_vertical = 0
text = "Prototype"

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -33.0
offset_right = 69.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="Buttons"]
layout_mode = 2
text = "Start"

[node name="Credits" type="Button" parent="Buttons"]
layout_mode = 2
text = "Credits"

[node name="CreditsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -159.0
offset_right = 225.0
offset_bottom = 159.0
grow_horizontal = 2
grow_vertical = 2

[node name="CreditsLabel" type="RichTextLabel" parent="CreditsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -212.0
offset_top = -141.0
offset_right = 212.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true

[node name="CreditsClose" type="Button" parent="CreditsPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -41.0
offset_right = 25.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Close"

[connection signal="pressed" from="Buttons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Buttons/Credits" to="." method="_on_credits_pressed"]
[connection signal="meta_clicked" from="CreditsPanel/CreditsLabel" to="." method="_on_credits_label_meta_clicked"]
[connection signal="pressed" from="CreditsPanel/CreditsClose" to="." method="_on_credits_close_pressed"]
